# ros_ai_robowars_ws

./: muistilista.txt
src/robot_position/: CMakeLists.txt  package.xml
src/robot_position/src/: predict_robot1_position.py  robot1_positions.csv  robot1_write_to_csv.py  train_robot1_position.py
src/robot_position/src/saved_model/: saved_model.pb
src/robot_position/src/saved_model/variables/: variables.data-00000-of-00001  variables.index
src/robotti_1/: CMakeLists.txt  package.xml
src/robotti_1/config/: robot1_controller.yaml
src/robotti_1/launch/: spawn_robo1.launch
src/robotti_1/src/: npc_robot.py  robot1_random_walk.py
src/robotti_1/urdf/: robotti_1.urdf
src/robotti_5/: package.xml
src/robotti_5/config/: robot5_controller.yaml
src/robotti_5/launch/: gazebo.launch  spawn_robo5.launch
src/robotti_5/urdf/: robotti_5.urdf
src/samk_robowar_world/: CMakeLists.txt  README.md  package.xml
src/samk_robowar_world/launch/: samk_robowar_arena.launch  samk_robowar_arena_no_pit.launch
src/samk_robowar_world/models/areena/: model.config  model.sdf
src/samk_robowar_world/models/areena_no_pit/: areena3.dae  model.config  model.sdf
src/samk_robowar_world/models/areena_no_pit2/: areena4.stl  model.config  model.sdf
src/samk_robowar_world/world/: arena.world  arena_no_pit.world  arena_no_pit2.world
